# cc-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  功能优化清单.md  已经做完的.md
.githooks/: pre-push
.github/workflows/: build.yml
design/: ui-redesign-preview.html  v2.1-features.html  设计稿-日志页与连接按钮.html
desktop/: index.html  package-lock.json  package.json  prepare-sidecar.js  vite.config.ts
desktop/design/: command-allowlist-design.html  dashboard-v1.html  notification-toggles-design.html  ui-a-layer.html  ui-refresh-v1.html
desktop/frontend-placeholder/: index.html
desktop/scripts/: gen-changelog.mjs  generate-updater-json.mjs  release.mjs  sync-version.mjs
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/macros/: Cargo.toml
desktop/src-tauri/macros/src/: lib.rs
desktop/src-tauri/src/: audit.rs  backup.rs  browse.rs  commands.rs  config.rs  db.rs  diff_utils.rs  encoding.rs  firewall.rs  ip_watch.rs  lib.rs  main.rs  network.rs  process_job.rs  state.rs  timing.rs
desktop/src-tauri/src/mcp/: http.rs  mod.rs  sse.rs
desktop/src-tauri/src/mcp/tools/: analyze_file.rs  batch.rs  command_policy.rs  copy_files.rs  create_directory.rs  delete_files.rs  edit_files.rs  get_command_output.rs  list_allowed_roots.rs  list_directory.rs  mod.rs  move_files.rs  notebook_edit.rs  push_notification.rs  read_files.rs  registry.rs  remove_directory.rs  run_command.rs  search_files.rs  shell.rs  stop_command.rs  write_files.rs
desktop/src-tauri/src/security/: auth.rs  extension.rs  filesize.rs  mod.rs  path.rs  ratelimit.rs
desktop/src-tauri/tests/: perf_real.rs
desktop/src/components/: ErrorBoundary.tsx
desktop/src/components/backup/: VersionHistoryModal.tsx
desktop/src/components/layout/: Header.tsx  TitleBarControls.tsx  UpdateBadge.tsx
desktop/src/components/modals/: CommandPalette.tsx  DirectoryBrowser.tsx  OnboardingGuide.tsx
desktop/src/components/modals/onboarding/: StepAddDir.tsx  StepConnectCmd.tsx  StepPickAddress.tsx  StepTest.tsx
desktop/src/components/tabs/: AboutGroup.tsx  AuditPager.tsx  ChangelogView.tsx  CommandAllowlistCard.tsx  ConnectHero.tsx  ConnectTab.tsx  FileControlCard.tsx  HeroStats.tsx  LogDetailPanel.tsx  LogTab.tsx  PerfCharts.tsx  RestoreBackupDialog.tsx  RunningCommandsCard.tsx  SecurityOverview.tsx  SecurityTab.tsx  SettingsTab.tsx  SettingsToggles.tsx  TokenManager.tsx  UpdateGroup.tsx
desktop/src/components/tabs/connect/: AddressPicker.tsx  FirewallAlertBlock.tsx  IpChangedBanner.tsx  Steps.tsx  widgets.tsx
desktop/src/components/ui/: ConfirmDialog.tsx  ConfirmModal.tsx  EmptyState.tsx  InlineNum.tsx  Modal.tsx  SavedHint.tsx  SettingsRow.tsx  Skeleton.tsx  Spinner.tsx  ToggleRow.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  chip-input.tsx  combobox.tsx  dialog.tsx  icon.tsx  input.tsx  label.tsx  switch.tsx  table.tsx  tabs.tsx  toast.tsx
desktop/src/components/update/: UpdateNotesDialog.tsx
desktop/src/contexts/: UpdateContext.tsx
desktop/src/hooks/: useAutoAnimateRM.ts  useCountUp.ts  usePrefersReducedMotion.ts
desktop/src/lib/: about.ts  changelog.generated.ts  tauri.ts  theme.ts  types.ts  utils.test.ts  utils.ts
docs/: MCP-远程测试报告-2026-07-13.md  MCP-远程测试指南.md  MCP工具安全审查报告-2026-07-12.md  UI功能优化清单.md  benchmark-vs-native-claude-code.md  体验优化方案.md  性能审计报告.md
docs/marketing/: article-main.md  article-platforms.md  promotion-plan.md  release-checklist.md
proposals/: backup_ux_clarify_plan.md  backup_viewer_redesign_plan.md  bash-exec-upgrade.md  handwritten_dispatch_refactor_rfc.md  litecode_tool_gap_analysis.md  litecode_tool_gap_remediation.md  mcp_tool_ux_upgrades_rfc.md  perf_compression_and_batch_feasibility.md  perf_compression_and_batch_impl.md  perf_o1_timing_breakdown_impl.md  process_job_process_wrap_migration.md  rmcp_migration_rfc.md  rollback_and_diff_rfc.md  run_command_security_patch.md  search_files_native_parity.md  session_cwd_persistence_rfc.md  skill_and_rules_autodiscovery_rfc.md  tray_icon_flicker_fix_rfc.md  全量审计报告-2026-07-19.md
server/: .gitignore  build.js  cc-bridge.js  config.json.example  package-lock.json  package.json  ui.html
server/test/: mcp-client-test.js
tools/: audit_dashboard.html  audit_stats.py  merge_excels.py  perf_snapshot.html
tools/_test_xlsx/: merged.xlsx  季度汇总.xlsx  这是一个非常非常非常非常非常非常长的文件名超过了三十一个字符限制.xlsx  销售报表.xlsx
