[package]
name = "cc-bridge-desktop"
version = "2.2.8"
description = "cc-bridge: local MCP file bridge for remote Claude Code"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"

# HTTP server (MCP protocol handled via axum directly)
axum = "0.8"
tower-http = { version = "0.6", features = ["limit"] }

# Async runtime
tokio = { version = "1", features = ["fs", "sync", "net", "rt", "macros", "process", "time", "io-util"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
subtle = "2"
rand = "0.8"

# Filesystem
regex = "1"

# Encoding detection/transcoding (GBK/GB18030 等非 UTF-8 文件读写)
encoding_rs = "0.8"

# Network interface enumeration (multi-homed: VPN + LAN)
if-addrs = "0.13"

# Concurrency
dashmap = "6"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }
# 参考 PastePanda 配置：薄 LTO + 体积优先 opt + strip 符号
# 预期：19.5MB exe 砍到 14-15MB
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
