[package]
name = "cc-bridge-desktop"
version = "2.3.3"
description = "cc-bridge: local MCP file bridge for remote Claude Code"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
# P2-2：更新源 env 覆盖（CCBRIDGE_UPDATE_ENDPOINT）构造 Url 用，与插件共用同一份 url 2.x
url = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"

# HTTP server (MCP protocol handled via axum directly)
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }  # E-P0-4: ConcurrencyLimitLayer
tower-http = { version = "0.6", features = ["limit", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["fs", "sync", "net", "rt", "macros", "process", "time", "io-util"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security
subtle = "2"
rand = "0.8"

# Filesystem
regex = "1"
# 目录遍历(自动跳过 .gitignore 列出的目录) + 完整 glob 语义，替换手写 walker/通配符
# （P4-2，仅限 search_files，见 功能优化清单.md）
ignore = "0.4"
globset = "0.4"

# 内容搜索引擎（P6-3）：ripgrep 同款 grep-searcher（内存映射 + SIMD 行扫描 +
# 字面量预筛）+ grep-regex（默认开启字面量优化）。替换旧版逐行 BufReader.lines()
# + regex，大文件内容搜索提速 2–5x，并自动二进制检测 + 非 UTF-8(Lossy) 鲁棒
# （修复 GBK 老工程源码被漏搜的隐藏 bug）。只引 grep-searcher/grep-regex 两个，
# 不引 grep-cli（会拉入额外体积，冲击「14MB exe」卖点，见 规则8）。
grep-searcher = "0.1"
grep-regex = "0.1"

# Encoding detection/transcoding (GBK/GB18030 等非 UTF-8 文件读写)
encoding_rs = "0.8"

# Network interface enumeration (multi-homed: VPN + LAN)
if-addrs = "0.13"

# Concurrency
dashmap = "6"

# 内部 proc-macro（手写 dispatch 折中重构：ToolSchema 自动派生 inputSchema）。
# 仅编译期依赖，不进 exe（守二进制体积红线，见 规则8）。
cc-bridge-macros = { path = "macros" }

# Unified diff 生成（edit_files/write_files 改文件后随结果回传增删摘要，P3-1，见 功能优化清单.md）
similar = "3.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# Image decoding (tray icon overlay)
png = "0.17"

[target.'cfg(target_os = "windows")'.dependencies]
# 与 process-wrap (8.0.2) 共用同一份 windows 0.56，避免重复编译导致体积膨胀；
# process-wrap 的 job-object / creation-flags feature 会自动启用 windows 的
# Win32_System_JobObjects / Win32_System_Threading 等子模块。
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }
# 进程树治理（跨平台）：run_command 用其 JobObject wrapper 替换原手写 win32job
# （KillOnJobClose）。stop 时显式 start_kill() 触发 TerminateJobObject 杀整树
# （process-wrap 的 std JobObject 默认不 kill-on-close，drop 不会杀进程）。
# 精确锁 =8.0.2：对齐 windows 0.56（避免拉入第二份 windows 0.61 绑定膨胀二进制）；
# 必须开 tracing feature——process-wrap 的 job_object 模块无条件调用 debug! 宏，
# 而该宏仅在 tracing feature 下 import，关掉 default-features 会导致编译失败。
process-wrap = { version = "=8.0.2", default-features = false, features = ["std", "job-object", "creation-flags", "tracing"] }
# 参考 PastePanda 配置：薄 LTO + 体积优先 opt + strip 符号
# 预期：19.5MB exe 砍到 14-15MB

# 集成测试：真实起 MCP server + reqwest 客户端做 over-the-wire 验证
# （gzip 响应头 / batch 合并 / 审计留痕）。Windows 上 default-tls 走系统
# schannel，无需 openssl 编译；gzip(false) 用于强制观察压缩响应头。
[dev-dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "default-tls"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"

# E-P2-12: search_files 用到的 grep/regex crate 升级到 opt-level=3，CPU 密集受益
[profile.release.package.grep-searcher]
opt-level = 3

[profile.release.package.grep-regex]
opt-level = 3

[profile.release.package.regex]
opt-level = 3

[profile.release.package.regex-automata]
opt-level = 3
